--- a/BasicTemplate/KiberlabLMS/KiberlabLMS/appsettings.json
+++ b/BasicTemplate/KiberlabLMS/KiberlabLMS/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-KiberlabLMS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=aspnet-KiberlabLMS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
